--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "scripts": {
     "start": "webpack serve --open --mode development --config webpack.config.js",
     "start-api": "cd api && venv\\Scripts\\activate && flask run",
+    "start-api-mac": "cd api && source venv/bin/activate && flask run",
     "build": "webpack --mode production --config webpack.config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
